vpc/service/route_table_data.json
{
  "Associations": [
    {
      "AssociationState": {
        "State": "associated",
        "StatusMessage": null
      },
      "GatewayId": null,
      "Main": false,
      "RouteTableAssociationId": "rtbassoc-d1bbacb4",
      "RouteTableId": "rtb-4e63412b",
      "SubnetId": "subnet-cd1f7cba"
    },
    {
      "AssociationState": {
        "State": "associated",
        "StatusMessage": null
      },
      "GatewayId": null,
      "Main": false,
      "RouteTableAssociationId": "rtbassoc-031e7574f662d40c5",
      "RouteTableId": "rtb-4e63412b",
      "SubnetId": "subnet-0b63ce937164c8a82"
    },
    {
      "AssociationState": {
        "State": "associated",
        "StatusMessage": null
      },
      "GatewayId": null,
      "Main": false,
      "RouteTableAssociationId": "rtbassoc-17d9476d",
      "RouteTableId": "rtb-4e63412b",
      "SubnetId": "subnet-9fdad3d7"
    }
  ],
  "OwnerId": "179727101194",
  "PropagatingVgws": null,
  "RouteTableId": "rtb-4e63412b",
  "Routes": [
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.70.202.159/32",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.70.236.246/32",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.73.16.211/32",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.73.70.27/32",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.82.38.127/32",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.92.15.85/32",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.92.21.119/32",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.92.48.213/32",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "172.27.24.0/24",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "172.27.25.0/24",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "172.27.26.0/24",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "172.28.1.0/24",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "blackhole",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-0e76af569022af01a"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "192.168.154.0/23",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.92.0.0/23",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-7b8a2112"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.92.20.0/23",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.127.254.0/23",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-dd35b9b4"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "192.168.64.0/22",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "192.168.68.0/22",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.64.144.0/22",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-7f75d017"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.70.224.0/22",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-a700f3cf"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.70.236.0/22",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.70.248.0/22",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-ec7adf84"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.73.88.0/22",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-076820a91ba0646e9"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.93.240.0/22",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-bb45b2d3"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.93.248.0/22",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-e243b48a"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.126.120.0/22",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-0ad2dadf729fd27f9"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.127.112.0/22",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-0e791233d0764736e"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.127.116.0/22",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-0c8dafb780c91bb86"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.64.128.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-bc8c0dd5"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.66.232.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-9cd83cf4"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.66.248.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-dbdb3fb3"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.72.88.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-166b637f"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.73.0.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-862fd6ee"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.73.16.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.73.80.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.92.8.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.92.32.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-0dde0d80a33b661db"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.92.48.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.92.64.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-8c9e68e4"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.92.88.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-a31ad6cb"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.92.104.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-af15dbc7"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.92.120.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-a958d0c0"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.93.224.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-a958d0c0"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.126.40.0/21",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-09a2c9026510eba3e"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.64.32.0/20",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-531eba3a"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.70.192.0/20",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.72.32.0/20",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-8417b3ed"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.73.64.0/20",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.73.160.0/20",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-0bc630184d1ae2a15"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.73.176.0/20",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-0d733c42c01acc3c7"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.91.0.0/20",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-ab58d0c2"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.91.32.0/20",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-bb45b2d3"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.91.48.0/20",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-e243b48a"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.93.128.0/20",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-ab58d0c2"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.66.192.0/19",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-d462c0bd"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.67.64.0/19",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-d462c0bd"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.64.64.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-2ebdfc47"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.66.0.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "local",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRouteTable",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.70.0.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-330ba25a"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.72.192.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-eec18087"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.75.0.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-770fa61e"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.75.128.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-912ec7f9"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.75.192.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-d72fc6bf"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.82.0.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.82.64.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.82.128.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.85.0.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.85.64.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.85.128.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.121.0.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-2bcd3f43"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.121.192.0/18",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-7936c411"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.74.0.0/17",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-f97cdb90"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.77.0.0/17",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-e64beb8f"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.89.0.0/17",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-072a55bc73e7797b1"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.89.128.0/17",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-082120fba49c7b83f"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.94.0.0/17",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-e64beb8f"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "172.16.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "172.17.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "172.21.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "172.22.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "10.254.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-09832d43eb4872b81"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.65.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "local",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRouteTable",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.69.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-2646df4f"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.82.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.85.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.99.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-04ef5aa895be99526",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.112.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.113.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.118.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.122.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "local",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRouteTable",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.125.0.0/16",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-1547de7c"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.112.0.0/15",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": "tgw-051ac591afa83daf6",
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "172.16.0.0/12",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "100.64.0.0/10",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "10.0.0.0/8",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "11.0.0.0/8",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vgw-1a20c273",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": "0.0.0.0/0",
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": "nat-08363a73e9f419b29",
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2600:1f18:55:fc00::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-531eba3a"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2600:1f18:6bf:b300::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-8417b3ed"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2600:1f18:1b73:9500::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-09832d43eb4872b81"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2600:1f18:2772:d500::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "local",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRouteTable",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f100::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-7b8a2112"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f105::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-ab58d0c2"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f108::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-a958d0c0"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f109::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-f97cdb90"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f10c::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-09a2c9026510eba3e"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f10e::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-0dde0d80a33b661db"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f112::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-a700f3cf"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f114::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-8c9e68e4"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f116::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-770fa61e"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f116:100::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-1547de7c"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f117::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-2646df4f"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f117:100::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-330ba25a"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f118::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-ec7adf84"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f119::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-7f75d017"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f11b::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-166b637f"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f11c::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-dd35b9b4"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f11e::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-eec18087"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f11f::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-2ebdfc47"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f121::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-7936c411"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f122::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-2bcd3f43"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f125::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-076820a91ba0646e9"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f126::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-0ad2dadf729fd27f9"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f127::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-e64beb8f"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f128::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-d462c0bd"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f12b::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-862fd6ee"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f12c::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-bc8c0dd5"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f12d::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-af15dbc7"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f12e::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-a31ad6cb"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f131::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-912ec7f9"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f132::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-d72fc6bf"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f133::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-e243b48a"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f134::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-bb45b2d3"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f137::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-dbdb3fb3"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f138::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-9cd83cf4"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f13b::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-082120fba49c7b83f"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f13c::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-072a55bc73e7797b1"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f13d::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-0bc630184d1ae2a15"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f13e::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-0d733c42c01acc3c7"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f140::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-0c8dafb780c91bb86"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "2a03:f00f:f141::/56",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": null,
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": "pcx-0e791233d0764736e"
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": "::/0",
      "DestinationPrefixListId": null,
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "igw-35019650",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": "pl-02cd2c6b",
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vpce-0cedf7164c0d0b989",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    },
    {
      "CarrierGatewayId": null,
      "DestinationCidrBlock": null,
      "DestinationIpv6CidrBlock": null,
      "DestinationPrefixListId": "pl-63a5400a",
      "EgressOnlyInternetGatewayId": null,
      "GatewayId": "vpce-5dce2a34",
      "InstanceId": null,
      "InstanceOwnerId": null,
      "LocalGatewayId": null,
      "NatGatewayId": null,
      "NetworkInterfaceId": null,
      "Origin": "CreateRoute",
      "State": "active",
      "TransitGatewayId": null,
      "VpcPeeringConnectionId": null
    }
  ],
  "Tags": [],
  "VpcId": "vpc-46f5a223"
}
